[project]
name = "desafio"
version = "0.1.0"
description = ""
authors = [
    {name = "inregis",email = "inregis1@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "bcrypt (==4.0.1)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

